--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,36 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../static/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Geologica:wght,SHRP@100..900,100&display=swap" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='icon.webp')}}">
   <title>TARO.AI</title>
 </head>
 <body>
+  <header>
+    <a href="{{ url_for('home.home') }}" class="grid-header">
+      <img src="{{ url_for('static', filename='logo.png')}}" alt="logo">
+      <div>
+        <h1>ТАРО.<span>AI</span></h1>
+        <p>Добро пожаловать</p>
+      </div>
+      <h2>Задай вопрос <span>картам</span></h2>
+    </a>
+  </header>
   {% with messages = get_flashed_messages(with_categories=true) %}
    {% for category, message in messages %}
     {% if category == 'error' %}
       <div class="popup">
-        <img src="../static/img/cross.png" alt="popup-cross">
+        <img src="{{ url_for('static', filename='img/cross.webp') }}" alt="popup-cross">
         <p>{{ message }}</p>
         <button class="popup-close">Хорошо</button>
       </div>
     {% endif %}
    {% endfor %}
   {% endwith %}
-  {% block content %}
-  {% endblock %}
+  <div class="main-container">
+    {% block content %}
+    {% endblock %}
+  </div>
+  <footer>
+    <p>ИП Баденов Кирилл Дмитриевич</p>
+    <p>ИНН: 371123377347</p>
+    <p>ОГРН: 323370000061401</p>
+    <a href="mailto:gpttaro@yandex.ru">gpttaro@yandex.ru</a>
+    <a href="{{ url_for('home.oferta') }}">Публичная оферта</a>
+  </footer>
   <script>
-    $(document).ready(function() {
-        $('.popup').each(function() {
-              const popup = $(this);
-              popup.addClass('open-popup');
-          });
+      document.addEventListener('DOMContentLoaded', function() {
+           document.querySelectorAll('.popup').forEach(function(popup) {
+                popup.classList.add('open-popup');
+           });
 
-        $(document).on('click', '.popup-close', function() {
-            $(this).closest('.popup').removeClass('open-popup');
-        });
-    });
+          document.querySelectorAll('.popup-close').forEach(function(button) {
+              button.addEventListener('click', function() {
+                  button.closest('.popup').classList.remove('open-popup');
+              });
+          });
+      });
   </script>
+  <script src="{{ url_for('static', filename='streaming-answer.js') }}"></script>
 </body>
 </html>
