adding admin panel

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <a href="{{ url_for('home.home') }}" class="grid-header">
-      <img src="{{ url_for('static', filename='logo.png')}}" alt="logo">
+      <img src="{{ url_for('static', filename='logo.webp')}}" alt="logo">
       <div>
         <h1>ТАРО.<span>AI</span></h1>
         <p>Добро пожаловать</p>
