--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -20,7 +20,7 @@
       <button class="new_question">Новый вопрос</button>
     </div>
     <div class="grid-user-data">
-      <p>
+      <p class="balance">
         {% if user.is_authenticated %}
          Баланс раскладов: {{ user.balance }}
         {% else %}
@@ -29,7 +29,7 @@
       </p>
       <p>
         {% if user.is_authenticated %}
-          {{ user.login }}
+          {{ user.username }}
         {% else %}
           Не авторизован
         {% endif %}
@@ -38,7 +38,7 @@
         {% if user.is_authenticated %}
           <a href="{{ url_for('auth.logout') }}">Выйти</a>
         {% else %}
-          <a href="{{ url_for('auth.authorization') }}">Войти</a>
+          <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="gpttaro_bot" data-size="large" data-userpic="false" data-radius="10" data-auth-url="http://127.0.0.1/auth/telegram" data-request-access="write"></script>
         {% endif %}
     </div>
 {% endblock %}
