--- a/website/templates/pay-once.html
+++ b/website/templates/pay-once.html
@@ -11,7 +11,7 @@
             <p>10 раскладов</p>
           </div>
           <h5>Нет выгоды</h5>
-          <a class="btn-buy">Купить</a>
+          <a class="btn-buy" href="{{ url_for("payments.payment_creation", value=99, type=1, quantity=10) }}">Купить</a>
       </div>
     </div>
     <div class="fifty-requests">
@@ -22,7 +22,7 @@
           <p>50 раскладов</p>
         </div>
         <h2>Выгода 60%</h2>
-        <a class="btn-buy">Купить</a>
+        <a class="btn-buy" href="{{ url_for("payments.payment_creation", value=199, type=1, quantity=50) }}">Купить</a>
       </div>
     </div>
     <div class="thirty-requests">
@@ -33,7 +33,7 @@
           <p>30 раскладов</p>
         </div>
         <h5>Выгода 50%</h5>
-        <a class="btn-buy">Купить</a>
+        <a class="btn-buy" href="{{ url_for("payments.payment_creation", value=149, type=1, quantity=30) }}">Купить</a>
       </div>
     </div>
   </div>
