--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -38,7 +38,7 @@
         {% if user.is_authenticated %}
           <a href="{{ url_for('auth.logout') }}">Выйти</a>
         {% else %}
-          <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="gpttaro_bot" data-size="large" data-userpic="false" data-radius="10" data-auth-url="http://127.0.0.1/auth/telegram" data-request-access="write"></script>
+          <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="gpttaro_bot" data-size="large" data-userpic="false" data-radius="10" data-auth-url="https://gpttaro.online/auth/telegram" data-request-access="write"></script>
         {% endif %}
     </div>
 {% endblock %}
