--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 {% block content %}
     <form method="POST" class="grid-send-ask">
-      <textarea class="question" name="question"></textarea>
+      <textarea class="question" name="question" placeholder="Напиши свой вопрос" maxlength="150"></textarea>
       <div class="select-dropdown">
         <select class="cards_number" name="cards_number">
           <option value="1">1 КАРТА</option>
@@ -34,9 +34,9 @@
           Не авторизован
         {% endif %}
       </p>
-      <a href="{{ url_for('payments.pay_once') }}" class="deposit-money-a">Пополнить Баланс</a>
+      <a href="{{ url_for('payments.pay_once') }}" class="a-hover deposit-money-a">Пополнить Баланс</a>
         {% if user.is_authenticated %}
-          <a href="{{ url_for('auth.logout') }}">Выйти</a>
+          <a href="{{ url_for('auth.logout') }}" class="a-hover">Выйти</a>
         {% else %}
           <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="gpttaro_bot" data-size="large" data-userpic="false" data-radius="10" data-auth-url="https://gpttaro.online/auth/telegram" data-request-access="write"></script>
         {% endif %}
