--- a/website/templates/payment-macros.html
+++ b/website/templates/payment-macros.html
@@ -11,7 +11,7 @@
             color: var(--color-text);
             border: 3px solid var(--color-middle);
         "
-      {% endif %}>Купить расклады</a>
+      {% endif %} class="a-hover">Купить расклады</a>
     <a href="{{ url_for('payments.pay_subscription') }}"
       {% if page_name == "/pay-subscription" %}
           style="
@@ -19,6 +19,6 @@
               color: var(--color-text);
               border: 3px solid var(--color-middle);
           "
-      {% endif %}>Подписка</a>
+      {% endif %} class="a-hover">Подписка</a>
   </div>
 {% endmacro %}
