--- a/website/static/style.css
+++ b/website/static/style.css
@@ -70,7 +70,7 @@ html {
     background-color: var(--color-main);
     color: var(--color-text);
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     position: relative;
 }
 
@@ -132,7 +132,7 @@ footer a {
 
 .grid-send-ask {
     display: grid;
-    grid-template-columns: minmax(150px, 400px) 90px 50px;
+    grid-template-columns: minmax(110px, 400px) 90px minmax(30px, 50px);
     grid-template-rows: 50px;
     grid-gap: calc(var(--index) * 0.5);
     margin: 0 calc(var(--index) * 1) calc(var(--index) * 1) calc(var(--index) * 1);
