--- a/website/static/style.css
+++ b/website/static/style.css
@@ -70,7 +70,7 @@ html {
     background-color: var(--color-main);
     color: var(--color-text);
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     position: relative;
 }
 
@@ -198,7 +198,7 @@ footer a {
     grid-gap: 16px;
     align-items: stretch;
     justify-items: stretch;
-    margin-bottom: calc(var(--index) * 3);
+    margin-bottom: calc(var(--index) * 6);
     margin-right: 10px;
     margin-left: 10px;
 }
